loading artist name and some card feture

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             <h2>Your Library</h2>
           </div>
           <div class="songList">
-            <ul>
-
-            </ul>
+            <ul></ul>
           </div>
           <div class="footer">
             <div>
@@ -89,7 +87,7 @@
         <div class="spotifyPlaylists">
           <h1>Spotify Playlists</h1>
           <div class="cardContainer">
-            <!-- <div data-folder="cs" class="card">
+            <div data-folder="cs" class="card">
               <div class="play">
                 <i
                   class="fa-solid fa-circle-play"
@@ -117,8 +115,6 @@
               <h2>Happay Hits</h2>
               <p>Hits to boost your mood and fill you with happiness</p>
             </div>
-            -->
-            
           </div>
           <div class="playbar">
             <div class="seekbar">
@@ -148,5 +144,5 @@
       src="https://kit.fontawesome.com/6405847d00.js"
       crossorigin="anonymous"
     ></script>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>  </body>
 </html>
