added some songlist card for display

--- a/index.html
+++ b/index.html
@@ -31,7 +31,41 @@
             <h2>Your Library</h2>
           </div>
           <div class="songList">
-            <ul></ul>
+            <ul>
+              <li>
+                <img class="invert" src="img/music.svg" alt="Music Icon" />
+                <div class="info">
+                  <div>song.name</div>
+                  <div class="artist">song.artist</div>
+                  <div class="playnow">
+                    <span>Play Now</span>
+                    <i class="fa-regular fa-circle-play fa-beat fa-2x"></i>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img class="invert" src="img/music.svg" alt="Music Icon" />
+                <div class="info">
+                  <div>song.name</div>
+                  <div class="artist">song.artist</div>
+                  <div class="playnow">
+                    <span>Play Now</span>
+                    <i class="fa-regular fa-circle-play fa-beat fa-2x"></i>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img class="invert" src="img/music.svg" alt="Music Icon" />
+                <div class="info">
+                  <div>song.name</div>
+                  <div class="artist">song.artist</div>
+                  <div class="playnow">
+                    <span>Play Now</span>
+                    <i class="fa-regular fa-circle-play fa-beat fa-2x"></i>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
           <div class="footer">
             <div>
@@ -144,5 +178,6 @@
       src="https://kit.fontawesome.com/6405847d00.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
+  </body>
 </html>
